# myLyricsAPI

./: .flaskenv  .gitignore  README.md  data.json  index.py  package.json  pyproject.toml  tailwind.config.js
static/: tailwind.css
templates/: add.html
